layout; iphone overscroll/overflow bug in landscape w/ minimal-ui

--- a/website-ui/css/app.less
+++ b/website-ui/css/app.less
@@ -1,8 +1,15 @@
 @import 'constants.less';
 
-body {
+html, body {
 	font-family: helvetica neue, helvetica, sans-serif;
 	font-size: 14px;
 	background: @BG_COLOR;
 	line-height: 1;
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	overflow: hidden;
 }
+
