--- a/website-ui/css/cytoscape.less
+++ b/website-ui/css/cytoscape.less
@@ -3,8 +3,8 @@
 #cy {
 	position: absolute;
 	left: 0;
-	right: @DATA_WIDTH;
+	right: @DEFAULT_DATA_WIDTH;
 	top: 0;
 	bottom: 0;
-	background: #eeffee;
+	background: #eeeeff;
 }
